# aw_ros2

./: .dockerignore  .env  .gitignore  .startup.bash.swp  Dockerfile  build.sh  compose.yaml  config.bash  docker-compose.yaml  frames_2024-04-11_15.41.57.gv  ros_entrypoint.sh  startup.sh
src/pointcloud2_assembler/: CMakeLists.txt  README.md  package.xml
src/pointcloud2_assembler/include/: pointcloud2_assembler.h
src/pointcloud2_assembler/src/: pointcloud2_assembler.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: controller.yaml  nav2_params.yaml  pc2_config.yaml
src/robot_description/launch/: controller.launch.py  display.launch.py  display2.launch.py  lidar_p2scan.launch.py
src/robot_description/meshes/: nuway.dae  sick-ldmrs.dae
src/robot_description/rviz/: display.rviz  rviz_configs.rviz  rviz_nav.rviz  rviz_nav2.rviz
src/robot_description/urdf/: nuway.urdf.xml  nuway_unity.urdf.xml
src/ros_unity_controller/: CMakeLists.txt  package.xml
src/ros_unity_controller/src/: odom_pub.cpp  odom_update.cpp  placeholder  simple_control_converter.cpp
src/ros_unity_localization/: CMakeLists.txt  package.xml
src/ros_unity_localization/config/: ekf.yaml
src/ros_unity_localization/launch/: robot_localization.launch.py
src/ros_unity_navigation/: CMakeLists.txt  package.xml
src/ros_unity_navigation/config/: nav2_params.yaml  nav2_params2.yaml  nav2_params_test.yaml  slam_config.yaml
src/ros_unity_navigation/launch/: localization_launch.py  navigation.launch.py  slam.launch.py
src/ros_unity_navigation/map/: map.pgm  (+2 more)
